deploy/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app
  namespace: app
spec:
  externalIPs:
  - 68.183.249.43
  ports:
  - name: app
    port: 8080
    protocol: TCP
  selector:
    app: app
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - image: registry.digitalocean.com/jwtracy-personal/app-apiserver
        imagePullPolicy: Always
        name: app-apiserver
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app: app
  name: app
  namespace: app
spec:
  backend:
    serviceName: app
    servicePort: 8080
  rules:
  - http:
      paths:
      - backend:
          serviceName: app
          servicePort: 8080
        path: /app(/|$)(.*)
        pathType: Prefix
